unpackaged/main/default/objects/WO_Update__c/WO_Update__c.object-meta.xml
<CustomObject>
    <label>WO Update</label>
    <nameField>
        <displayFormat>WO-{000000000}</displayFormat>
        <label>WO Update</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>WO Updates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>