unpackaged/main/default/objects/WO_Update__c/fields/Arrival_Window_End__c.field-meta.xml
<CustomField>
    <fullName>Arrival_Window_End__c</fullName>
    <label>Arrival Window End</label>
    <type>DateTime</type>
</CustomField>