unpackaged/main/default/objects/WO_Update__c/fields/Arrival_Window_Start__c.field-meta.xml
<CustomField>
    <fullName>Arrival_Window_Start__c</fullName>
    <label>Arrival Window Start</label>
    <type>DateTime</type>
</CustomField>