unpackaged/main/default/objects/WO_Update__c/fields/Booking_Profile__c.field-meta.xml
<CustomField>
    <fullName>Booking_Profile__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Booking Profile</label>
    <referenceTo>Entitlement</referenceTo>
    <relationshipLabel>WO Updates</relationshipLabel>
    <relationshipName>WO_Updates</relationshipName>
    <type>Lookup</type>
</CustomField>