unpackaged/main/default/objects/WO_Update__c/fields/Can_be_Cancelled__c.field-meta.xml
<CustomField>
    <fullName>Can_be_Cancelled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Can be Cancelled</label>
    <type>Checkbox</type>
</CustomField>