unpackaged/main/default/objects/WO_Update__c/fields/Customer_Requested_Update__c.field-meta.xml
<CustomField>
    <fullName>Customer_Requested_Update__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Customer Requested Update</label>
    <type>Checkbox</type>
</CustomField>