unpackaged/main/default/objects/WO_Update__c/fields/Incompletion_Reason__c.field-meta.xml
<CustomField>
    <fullName>Incompletion_Reason__c</fullName>
    <label>Incompletion Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>