unpackaged/main/default/objects/WO_Update__c/fields/Information01__c.field-meta.xml
<CustomField>
    <fullName>Information01__c</fullName>
    <label>Information01</label>
    <length>255</length>
    <type>Text</type>
</CustomField>