unpackaged/main/default/objects/WO_Update__c/fields/Initial_Requested_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Initial_Requested_Date_Time__c</fullName>
    <label>Initial Requested Date Time</label>
    <type>DateTime</type>
</CustomField>