unpackaged/main/default/objects/WO_Update__c/fields/Quoted__c.field-meta.xml
<CustomField>
    <fullName>Quoted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Quoted</label>
    <type>Checkbox</type>
</CustomField>