unpackaged/main/default/objects/WO_Update__c/fields/Reference1__c.field-meta.xml
<CustomField>
    <fullName>Reference1__c</fullName>
    <label>Reference1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>