unpackaged/main/default/objects/WO_Update__c/fields/Reference2__c.field-meta.xml
<CustomField>
    <fullName>Reference2__c</fullName>
    <label>Reference2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>