unpackaged/main/default/objects/WO_Update__c/fields/Service_Type__c.field-meta.xml
<CustomField>
    <fullName>Service_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Type</label>
    <referenceTo>Service_Type__c</referenceTo>
    <relationshipLabel>WO Updates</relationshipLabel>
    <relationshipName>WO_Updates</relationshipName>
    <type>Lookup</type>
</CustomField>