unpackaged/main/default/objects/WO_Update__c/fields/SiteID__c.field-meta.xml
<CustomField>
    <fullName>SiteID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SiteID</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>WO Updates (SiteID)</relationshipLabel>
    <relationshipName>WO_Updates1</relationshipName>
    <type>Lookup</type>
</CustomField>