unpackaged/main/default/objects/WO_Update__c/fields/SLA__c.field-meta.xml
<CustomField>
    <fullName>SLA__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SLA</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>SLA_member__c.Sub_Customer__c</field>
            <operation>equals</operation>
            <valueField>$Source.Sub_Customer__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>SLA_member__c</referenceTo>
    <relationshipLabel>WO Updates</relationshipLabel>
    <relationshipName>WO_Updates</relationshipName>
    <type>Lookup</type>
</CustomField>