unpackaged/main/default/objects/WO_Update__c/fields/Sub_Customer__c.field-meta.xml
<CustomField>
    <fullName>Sub_Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sub Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>WO Updates</relationshipLabel>
    <relationshipName>WO_Updates</relationshipName>
    <type>Lookup</type>
</CustomField>