unpackaged/main/default/objects/WO_Update__c/fields/TextAttachments__c.field-meta.xml
<CustomField>
    <fullName>TextAttachments__c</fullName>
    <label>TextAttachments</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>