unpackaged/main/default/objects/WO_Update__c/fields/Update_Action__c.field-meta.xml
<CustomField>
    <fullName>Update_Action__c</fullName>
    <label>Update Action</label>
    <length>255</length>
    <type>Text</type>
</CustomField>