unpackaged/main/default/objects/WO_Update__c/fields/Update_Rejection_Reason__c.field-meta.xml
<CustomField>
    <fullName>Update_Rejection_Reason__c</fullName>
    <label>Update Rejection Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ticket In Progress</fullName>
            </value>
            <value>
                <fullName>Ticket Closed</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>