unpackaged/main/default/objects/WO_Update__c/fields/Vendor_Dispatch_Requested__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Dispatch_Requested__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Vendor Dispatch Requested</label>
    <type>Checkbox</type>
</CustomField>