unpackaged/main/default/objects/WO_Update__c/fields/Work_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>Work_Order_Number__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Work Order Number</label>
    <referenceTo>WorkOrder</referenceTo>
    <relationshipLabel>WO Updates</relationshipLabel>
    <relationshipName>WO_Updates</relationshipName>
    <type>Lookup</type>
</CustomField>